--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,7 +48,7 @@ jobs:
                   git remote set-url origin https://${github_token}@github.com/${repository}
                   npm run deploy
               env:
-                  user_name: "github-actions[bot]"
-                  user_email: "github-actions[bot]@users.noreply.github.com"
+                  user_name: "brandongrier7"
+                  user_email: "brandongrier7@gmail.com"
                   github_token: ${{ secrets.GH_TOKEN }}
                   repository: ${{ github.repository }}
